[feature](common|auth|launcher|webapp) Add multi-tenant foundation and RBAC system
- Add TenantContext, TenantConfig, TenantInterceptor for multi-tenant isolation
- Add MyBatis tenant plugin for automatic tenant_id filtering
- Implement RBAC: Role, Permission, Organization management (backend + frontend)
- Add tenant management pages (Platform admin, Tenant settings)
- Add database schema and seed data for tenants, roles, permissions
- Add Flyway migration scripts (V1-V10)
- Add frontend routes and permission constants

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>